cabal-version:   3.0
name:            repro
version:         0.1.0.0

-- synopsis:
-- description:
license:
author:          Ari Fordsham
maintainer:      arifordsham@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options:        -Wall
  default-extensions: DerivingVia

library
  import:           warnings
  exposed-modules:
    Idem
    ReproStore

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , containers
    , selective
    , text
    , vector

  hs-source-dirs:   src
  default-language: GHC2021
